[gd_scene load_steps=7 format=3 uid="uid://csj4v57ph5v5d"]

[ext_resource type="Texture2D" uid="uid://nllvcsxp1si6" path="res://assets/main/bg.png" id="1_kaqx8"]
[ext_resource type="Script" uid="uid://6b2myt3qbdne" path="res://scenes/raph/battle_ground.gd" id="1_nh46d"]
[ext_resource type="Script" uid="uid://b64xjjg7rdik0" path="res://scripts/card_data.gd" id="2_bobfm"]
[ext_resource type="Resource" uid="uid://dpienksexcqje" path="res://data/cards/001.tres" id="3_58mu0"]
[ext_resource type="Resource" uid="uid://dypw1dsqjs0ed" path="res://data/cards/002.tres" id="4_e2hfb"]
[ext_resource type="Resource" uid="uid://drjlofj0vhesv" path="res://data/cards/003.tres" id="5_58mu0"]

[node name="BattleGround" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nh46d")
starting_hand = Array[ExtResource("2_bobfm")]([ExtResource("3_58mu0"), ExtResource("4_e2hfb"), ExtResource("5_58mu0"), ExtResource("3_58mu0"), ExtResource("3_58mu0"), ExtResource("4_e2hfb")])

[node name="Bg" type="Sprite2D" parent="."]
texture = ExtResource("1_kaqx8")
centered = false
metadata/_edit_lock_ = true

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 184.0
offset_right = 576.0
offset_bottom = 208.0
text = "Score: 0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 208.0
offset_right = 576.0
offset_bottom = 384.0

[node name="PlayPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayArea" type="HBoxContainer" parent="VBoxContainer/PlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="HandPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HandArea" type="HBoxContainer" parent="VBoxContainer/HandPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1
